updated infoboxes to look right on the wiki

--- a/World/Organizations/Corporations/11K.md
+++ b/World/Organizations/Corporations/11K.md
@@ -6,49 +6,47 @@ tags: RD, PZ, DW
 > [!bug] Issue
 > Logo desperately needs a redesign, and more detail is needed here eventually.
 
-<div style="float:right; clear:right; width:260px; margin:0 0 0 14; border-collapse:collapse">
-  <table style="float:right; clear:right; width:260px; margin:0 0 0 14; border:2px solid #666; line-height:1.5; border-collapse:collapse; font-size:smaller">
-	<tr>
-		<th colspan="2" style="border-bottom:2px solid #666; font-size:larger; padding:4px; text-align:center">11K</th>
-	</tr></table>
+<div>
+  <span style="float:right; width:260px; margin-left:14px; border:2px solid #666; line-height:1.5; font-size:larger; text-align:center; padding:4px">11K</span>
   </div>
 
-  <span align="center" style="float:right; clear:right; width:260px; margin:0 0 0 14; padding:4 0 0 0; border:2px solid #666; border-collapse:collapse">![[11k.png|250]]</span>
+  <span style="float:right; clear:right; width:260px; margin-left:14px; border-left:2px solid #666; border-right:2px solid #666; border-collapse:collapse; text-align:center; padding-top:4px">![[11k.png|250]]</span>
 
-  <div style="float:right; clear:right; width:260px; margin:0 0 0 14; border-collapse:collapse">
-    <table style="float:right; clear:right; width:260px; margin:0 0 7 14; border:2px solid #666; border-top:1px solid #666; line-height:1.5; border-collapse:collapse; font-size:smaller">
+  <div class="" style="float:right; clear:right">
+    <table class="" style="float:right; clear:right; width:260px; margin-left:14px; margin-bottom:7px; border:2px solid #666; border-collapse:collapse; line-height:1.5; font-size:small">
 	
-		<tr style="border-bottom:1px solid #666; border-top:2px solid #666">
-			<td style="padding:4px"><b>Type</b></td>
-			<td style="padding:4px">Conglomerate</td>
+		<tr style="border-bottom:1px solid #666">
+			<td style="padding:4px; vertical-align:middle"><b>Type</b></td>
+			<td style="padding:4px; vertical-align:middle">Conglomerate</td>
 		</tr>
 		
 		<tr style="border-bottom:1px solid #666">
-			<td style="padding:4px"><b>Founding date</b></td>
-			<td style="padding:4px">1873</td>
+			<td style="padding:4px; vertical-align:middle"><b>Founding date</b></td>
+			<td style="padding:4px; vertical-align:middle">1873</td>
 		</tr>
 		
 		<tr style="border-bottom:1px solid #666">
-			<td style="padding:4px"><b>Alternative names</b></td>
-			<td style="padding:4px">Eleven Kings<br>Anderson-Williams Co. (1873-1941)</td>
+			<td style="padding:4px; vertical-align:middle"><b>Alternative names</b></td>
+			<td style="padding:4px; vertical-align:middle">Eleven Kings<br>Anderson-Williams Co. (1873-1941)</td>
 		</tr>
 		
 		<tr style="border-bottom:1px solid #666">
-			<td style="padding:4px"><b>Leader</b></td>
-			<td style="padding:4px">Darian Williams</td>
+			<td style="padding:4px; vertical-align:middle"><b>Leader</b></td>
+			<td style="padding:4px; vertical-align:middle">Darian Williams</td>
 		</tr>
 	
 		<tr style="border-bottom:1px solid #666">
-			<td style="padding:4px"><b>Headquarters</b></td>
-			<td style="padding:4px">Avalon</td>
+			<td style="padding:4px; vertical-align:middle"><b>Headquarters</b></td>
+			<td style="padding:4px; vertical-align:middle">Avalon</td>
 		</tr>
 	
 		<tr style="border-bottom:1px solid #666">
-			<td style="padding:4px"><b>Motto</b></td>
-			<td style="padding:4px">The Dreams of Kings</td>
+			<td style="padding:4px; vertical-align:middle"><b>Motto</b></td>
+			<td style="padding:4px; vertical-align:middle">The Dreams of Kings</td>
+		</tr>
 	
-  </table>
-</div>
+    </table>
+  </div>
 
 11K is a global conglomerate of conglomerates, the largest in the world. Not only is it far larger than any other multinational conglomerate on their own, 11K holds a significant stake in most of them. Its holdings are so huge and diverse that 11K finds a significant stream of revenue from nearly every sector of industry that exists, even owning the entirety of [[Ilmaria]] and acting as its de facto government. It is headquartered in [[Avalon]].
 
