updated infoboxes [FINAL] (for real) (really (real))

--- a/World/Organizations/Corporations/11K.md
+++ b/World/Organizations/Corporations/11K.md
@@ -7,7 +7,7 @@ tags: RD, PZ, DW
 > Logo desperately needs a redesign, and more detail is needed here eventually.
 
 <div>
-  <span style="float:right; width:260px; margin-left:14px; border:2px solid #666; line-height:1.5; font-size:larger; text-align:center; padding:4px">11K</span>
+  <span style="float:right; width:260px; margin-left:14px; border:2px solid #666; line-height:1.5; font-size:larger; font-weight:bold; text-align:center; padding:4px">11K</span>
   </div>
 
   <span style="float:right; clear:right; width:260px; margin-left:14px; border-left:2px solid #666; border-right:2px solid #666; border-collapse:collapse; text-align:center; padding-top:4px">![[11k.png|250]]</span>
